--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,7 +10,9 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <div>
+        <!-- Login Form -->
         <form class="form-inline" method="POST" action="/login">
+          <div class="text-white">Hello <%= username %>!</div>
           <input class="form-control mr-2" type="text" name="username" placeholder="Type username">
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
