--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,12 +10,19 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <div>
+        <% if (username) { %>
+        <!-- Logout Form -->
+        <form class="form-inline justify-content-end" method="POST" action="/logout">
+          <div class="text-white mr-2">Hello <%= username %>!</div>
+          <button type="submit" class="btn btn-info">Logout</button>
+        </form>
+        <%} else { %>
         <!-- Login Form -->
         <form class="form-inline" method="POST" action="/login">
-          <div class="text-white">Hello <%= username %>!</div>
           <input class="form-control mr-2" type="text" name="username" placeholder="Type username">
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-success">Login</button>
         </form>
+        <% } %>
       </div>
     </div>
   </nav>
