--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,11 +17,13 @@
           <button type="submit" class="btn btn-info">Logout</button>
         </form>
         <%} else { %>
-        <!-- Login Form -->
+        <!-- Login Form
         <form class="form-inline" method="POST" action="/login">
           <input class="form-control mr-2" type="text" name="username" placeholder="Type username">
           <button type="submit" class="btn btn-success">Login</button>
-        </form>
+        </form> -->
+        <a href="/login" class="btn btn-success">Login</a>
+        <a href="/register" class="btn btn-warning">Register</a>
         <% } %>
       </div>
     </div>
