--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,17 +11,13 @@
       </div>
       <div>
         <% if (user) { %>
-        <!-- Logout Form -->
+        <!-- Logged In -->
         <form class="form-inline justify-content-end" method="POST" action="/logout">
           <div class="text-white mr-2">Hello <%= user.email %>!</div>
           <button type="submit" class="btn btn-info">Logout</button>
         </form>
         <%} else { %>
-        <!-- Login Form
-        <form class="form-inline" method="POST" action="/login">
-          <input class="form-control mr-2" type="text" name="username" placeholder="Type username">
-          <button type="submit" class="btn btn-success">Login</button>
-        </form> -->
+        <!-- Logged Out -->
         <a href="/login" class="btn btn-success">Login</a>
         <a href="/register" class="btn btn-warning">Register</a>
         <% } %>
