--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -14,7 +14,7 @@
 
     <%- include('partials/_header') %>
 
-    <main style="margin: 1em;">
+    <main class="container mt-5">
       <h3>Login</h3>
       <form action="/login" method="POST">
         <div class="form-group">
@@ -27,7 +27,6 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-      
     </main>
       <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
