--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -14,7 +14,7 @@
 
     <%- include('partials/_header') %>
 
-    <main style="margin: 1em;">
+    <main class="container mt-5">
       <h3>Register</h3>
       <form action="/register" method="POST">
         <div class="form-group">
