--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -14,7 +14,7 @@
         <!-- Logged In -->
         <form class="form-inline justify-content-end" method="POST" action="/logout">
           <div class="text-white mr-2">Hello <%= user.email %>!</div>
-          <button type="submit" class="btn btn-info">Logout</button>
+          <button type="submit" class="btn btn-outline-light">Logout</button>
         </form>
         <%} else { %>
         <!-- Logged Out -->
